<resources>
    <string name="app_name">Feexob</string>
    <string name="saved_images">Explore</string>
    <string name="but_text1">Observe</string>
    <string name="but_text2">Explore</string>
    <string name="but_text3">Experience</string>
    <string name="lets_text">Let\'s see how we feel today</string>
    <string name="qtext">How are/were you feeling?</string>
    <string name="main_text">Feel Explore Experience Observe</string>
    <string name="appName">Feexob</string>
    <string name="apply_filter">Apply Filter</string>
    <string name="savedimages">Choose the task of your preference</string>
    <string name="saveemotions">Take your time to note it down</string>
    <string name="typeemotions">Choose how you feel in general</string>
    <string name="empty_list">Empty List</string>
    <string name="click_here">Click here</string>
    <string name="do_not_have_an_account">Do not have an account?</string>
    <string name="login">Login</string>
    <string name="enter_paa">Enter the password</string>
    <string name="enter_the_email">Enter the email</string>
    <string name="reg">Register</string>
    <string name="have_acc">Already have an account</string>
    <string name="qa">Choose the type of a task</string>
    <string-array name="emotions">
        <item />
        <item>Energetic</item>
        <item>Satisfied</item>
        <item>Valuable</item>
        <item>Confused</item>
        <item>Loving</item>
        <item>Hurt</item>
        <item>Bored</item>
        <item>Thankful</item>
        <item>Delightful</item>
        <item>Lonely</item>
        <item>Helpless</item>
        <item>Amused</item>
        <item>Aware</item>
        <item>Thoughtful</item>
        <item>Apathetic</item>
        <item>Critical</item>
        <item>Playful</item>
        <item>Depressed</item>
        <item>Relaxed</item>
        <item>Guilty</item>
        <item>Insecure</item>
        <item>Creative</item>
        <item>Cheerful</item>
    </string-array>
</resources>