<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".UserAuthentication">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout3"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.37" >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/enter_the_email" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout2"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout3"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_psw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/enter_paa" />

    </com.google.android.material.textfield.TextInputLayout>



    <Button
        android:id="@+id/btn_login"
        android:layout_width="141dp"
        android:layout_height="98dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/button2_color"
        android:fontFamily="@font/poppins_bold"
        android:includeFontPadding="false"
        android:text="Login"
        android:textColor="@color/primaryText"
        android:textSize="@dimen/_13ssp"
        app:cornerRadius="@dimen/_60sdp"
        android:layout_marginTop="@dimen/_12ssp"
        app:layout_constraintEnd_toEndOf="@+id/textInputLayout2"
        app:layout_constraintStart_toStartOf="@+id/textInputLayout2"
        app:layout_constraintTop_toBottomOf="@+id/tv_statusLabel"
        app:layout_constraintVertical_bias="0.392" />

    <TextView
        android:id="@+id/tv_statusLabel"
        android:layout_width="156dp"
        android:layout_height="24dp"
        android:layout_marginEnd="8dp"
        android:gravity="end"
        android:text="@string/do_not_have_an_account"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/tv_changeScreenStatus"
        app:layout_constraintEnd_toStartOf="@+id/tv_changeScreenStatus"
        app:layout_constraintTop_toTopOf="@+id/tv_changeScreenStatus" />

    <TextView
        android:id="@+id/tv_changeScreenStatus"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/click_here"
        android:fontFamily="@font/poppins_bold"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="@+id/textInputLayout2"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout2" />


</androidx.constraintlayout.widget.ConstraintLayout>