<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/appCompatImageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/background_image" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/acc"
        android:layout_width="@dimen/_25sdp"
        android:layout_height="@dimen/_25sdp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginEnd="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:src="@drawable/ic_baseline_account_circle_24"/>


    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/landing_background"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="-16dp" />

    <Button
        android:id="@+id/buttonCamera"
        android:layout_width="175dp"
        android:layout_height="92dp"
        android:layout_marginBottom="50dp"
        android:backgroundTint="@color/button_color"
        android:fontFamily="@font/poppins"
        android:includeFontPadding="false"
        android:text="@string/new_image"
        app:cornerRadius="@dimen/_30sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcoming_text" />

    <TextView
        android:id="@+id/welcoming_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/lets_text"
        android:textColor="@color/button_color"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/appCompatImageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appName"
        app:layout_constraintVertical_bias="0.74" />

    <TextView
        android:id="@+id/welcoming_text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins"
        android:text="@string/main_text"
        android:textColor="@color/secondaryText"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/appCompatImageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appName"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/appName"
        android:layout_width="135dp"
        android:layout_height="50dp"
        android:layout_marginTop="136dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/appName"
        android:textColor="#E25C583E"
        android:textSize="35sp"
        app:layout_constraintEnd_toStartOf="@+id/appCompatImageView"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/appCompatImageView"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>